--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
+mainClassName = 'org.polytech.Main'
 group 'org.polytech'
 version '1.0-SNAPSHOT'
 
@@ -19,5 +20,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.1')
+    testCompile('org.junit.jupiter:junit-jupiter-engine:5.3.1')
+}
+
+test {
+    useJUnitPlatform()
 }
